--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+0.6.4
+=====
+
+- Add profile for MPEG4_P2_MP4_SP_L5_AAC.
+- Fix ADTS profiles
+- Fix MPEG4_P2_MP4_SP_L6_AAC
+
+All contributors to this release:
+
+Jens Georg <mail@jensge.org>
+Arun Raghavan <arun.raghavan@collabora.co.uk>
+
 0.6.3
 =====
 
