--- a/TODO
+++ b/TODO
@@ -20,6 +20,9 @@
   from GUPnPDLNAProfile. That could be easily done when above points
   are done.
 
+* Maybe expose/add a generic/GStreamer-only API taking
+  generic/GStreamer discovery data and returning a guessed profile.
+
 * Bring the tests back to life. And make them being run on make check.
 
 * Don't export all functions out there. There should be some linker
@@ -27,6 +30,7 @@
   file listing them. Otherwise using G_GNUC_INTERNAL for every
   function not to be exported will be tedious.
 
-* Generate Vala API.
-
 * Read TODO.old for some ideas.
+
+* Add a gupnp-dlna.h and gupnp-dlna-metadata.h main headers. Maybe
+  make them the only includable ones.
