--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+0.10.0
+======
+- Various fixes for the GStreamer 0.10 meta-data back-end.
+
+All contributors to this release:
+  Krzesimir Nowak <krnowak@openismus.com>
+  Jens Georg <mail@jensge.org>
+
 0.9.5
 =====
 - Add --disable-maintainer-mode option.
