--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+0.10.5
+======
+
+- Fix AAC ISO formats with recent GStreamer
+
+All contributors to this release:
+ - Jens Georg <mail@jensge.org>
+
 0.10.4
 ======
 - Call setlocale in commandline tools.
